--- a/lib/components/action-sheet/close/close.scss
+++ b/lib/components/action-sheet/close/close.scss
@@ -6,6 +6,7 @@
     margin-left: auto;
     display: none;
     cursor: pointer;
+    fill: var(--semantic-color-typography-prominent);
 
     @media (min-width: 1024px) {
         display: block;
