--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -1,13 +1,14 @@
-@import "../../../styles/quill/spacing.scss";
-@import "../../../styles/quill/font.size.scss";
-@import "../../../styles/quill/color.scss";
-@import "../../../styles/quill/color.semantic.scss";
-@import "../../../styles/quill/color.opacity.scss";
-@import "../../../styles/quill/motion.scss";
-@import "../../../styles/quill/font.weight.scss";
-@import "../../../styles/quill/border.scss";
-@import "../../../styles/quill/line.height.scss";
-@import "../../../styles/quill/size.scss";
+// @import "../../../styles/quill/spacing.scss";
+@import "@quill/spacing.scss";
+@import "@quill/font.size.scss";
+@import "@quill/color.scss";
+@import "@quill/color.semantic.scss";
+@import "@quill/color.opacity.scss";
+@import "@quill/motion.scss";
+@import "@quill/font.weight.scss";
+@import "@quill/border.scss";
+@import "@quill/line.height.scss";
+@import "@quill/size.scss";
 
 @keyframes dropIn {
     from {
