--- a/lib/components/Modal/Bottom/modal-bottom.scss
+++ b/lib/components/Modal/Bottom/modal-bottom.scss
@@ -15,8 +15,10 @@
         top: 0;
         bottom: 0;
         z-index: 9999;
-        height: 100%;
-        width: 100%;
+        // height: 100%;
+        // width: 100%;
+        height: 100vh;
+        width: 100vw;
         background-color: var(--semantic-color-background-overlay);
     }
 
@@ -25,6 +27,7 @@
         bottom: 0;
         width: 100%;
         // min-height: 28.9rem;
+        max-height: 90%;
         display: flex;
         align-items: stretch;
         justify-content: space-evenly;
