--- a/lib/components/action-sheet/mocks/mock.scss
+++ b/lib/components/action-sheet/mocks/mock.scss
@@ -6,4 +6,10 @@
         flex-direction: column;
         gap: var(--semantic-spacing-gap-lg);
     }
+
+    &--trigger {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
