--- a/lib/components/Modal/Bottom/modal-bottom.scss
+++ b/lib/components/Modal/Bottom/modal-bottom.scss
@@ -9,14 +9,12 @@
     &__overlay {
         //TODO: check, if it will work in IOS
         // position: fixed;
-        position: absolute;
+        position: fixed;
         left: 0;
         right: 0;
         top: 0;
         bottom: 0;
         z-index: 9999;
-        // height: 100%;
-        // width: 100%;
         height: 100vh;
         width: 100vw;
         background-color: var(--semantic-color-background-overlay);
@@ -26,13 +24,13 @@
         position: absolute;
         bottom: 0;
         width: 100%;
-        // min-height: 28.9rem;
+        // TODO: add overflow
         max-height: 90%;
         display: flex;
         align-items: stretch;
         justify-content: space-evenly;
         flex-direction: column;
-        background-color: var(--core-color-solid-slate-50);
+        background-color: var(--semantic-color-background-dialog);
         border-top-left-radius: var(--core-borderRadius-800);
         border-top-right-radius: var(--core-borderRadius-800);
         opacity: var(--core-opacity-50);
@@ -87,25 +85,7 @@
     }
 
     &__button {
-        display: flex;
-        height: 48px;
-        height: 48px;
-        padding: 12px 16px;
-        justify-content: center;
-        align-items: center;
-        align-self: stretch;
-        border-radius: 16px;
-
-        // TODO remove when button component will be merged
-        &-1 {
-            background: var(--core-color-solid-slate-1400);
-            color: var(--core-color-solid-slate-50);
-        }
-
-        &-2 {
-            border-radius: 16px;
-            border: 1px solid var(--core-color-solid-slate-1400);
-        }
+        border-width: var(--core-borderWidth-75);
 
         &-wrapper {
             align-self: stretch;
