--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -1,4 +1,3 @@
-// @import "../../../styles/quill/spacing.scss";
 @import "@quill/spacing.scss";
 @import "@quill/font.size.scss";
 @import "@quill/color.scss";
@@ -62,6 +61,11 @@
                 align-self: flex-end;
             }
         }
+
+        .icon_wrapper {
+            width: var(--core-size-1200);
+            height: var(--core-size-1200);
+        }
     }
 
     &__wrapper {
@@ -76,7 +80,6 @@
         position: relative;
         cursor: pointer;
         border-style: solid;
-        border-width: 1px;
 
         &:has(input:disabled) {
             cursor: not-allowed;
@@ -271,6 +274,10 @@
             transition-timing-function: var(--core-motion-ease-400);
             transition-duration: var(--core-motion-duration-200);
             pointer-events: none;
+
+            &__hasIcon {
+                left: 40px;
+            }
             &__status {
                 &--neutral {
                     color: var(--core-color-opacity-black-600);
