fix: pr suggestions

--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -94,7 +94,7 @@
                 padding-top: var(--core-spacing-600);
             }
         }
-        &[data-has-value="true"] {
+        &--has-value {
             &:has(label) {
                 padding-top: var(--core-spacing-600);
             }
@@ -290,21 +290,23 @@
                 }
             }
         }
-        .peer:placeholder-shown + .label {
-            font-size: var(--core-fontSize-100);
-            transform: translateY(0);
-        }
-        .peer:focus + .label {
-            transform: translateY(-100%);
-            line-height: var(--core-lineHeight-100);
-            font-size: var(--core-fontSize-50);
-            height: var(--core-size-900);
-            gap: var(--semantic-spacing-gap-sm);
-        }
-        .peer:not(placeholder-shown) + .label {
-            transform: translateY(-100%);
-            line-height: var(--core-lineHeight-100);
-            font-size: var(--core-fontSize-50);
+        .peer {
+            &:placeholder-shown + .label {
+                font-size: var(--core-fontSize-100);
+                transform: translateY(0);
+            }
+            &:focus + .label {
+                transform: translateY(-100%);
+                line-height: var(--core-lineHeight-100);
+                font-size: var(--core-fontSize-50);
+                height: var(--core-size-900);
+                gap: var(--semantic-spacing-gap-sm);
+            }
+            &:not(placeholder-shown) + .label {
+                transform: translateY(-100%);
+                line-height: var(--core-lineHeight-100);
+                font-size: var(--core-fontSize-50);
+            }
         }
 
         .status-icon {
