fix: update the message text to typography

--- a/lib/styles/quill-bundle/typhography.scss
+++ b/lib/styles/quill-bundle/typhography.scss
@@ -4,3 +4,4 @@
 @import "@quill/letter.spacing.scss";
 @import "@quill/line.height.scss";
 @import "@quill/color.semantic.scss";
+@import "@quill/text.decoration.scss";
