fix: change used of the icon wrapper token

--- a/lib/components/ActionSheet/header/header.scss
+++ b/lib/components/ActionSheet/header/header.scss
@@ -40,8 +40,8 @@
 
         &--icon {
             display: flex;
-            width: var(--semantic-spacing-general-2xl);
-            height: var(--semantic-spacing-general-2xl);
+            width: var(--core-size-2400);
+            height: var(--core-size-2400);
             justify-content: center;
             align-items: center;
             fill: var(--semantic-color-typography-prominent);
