refactor: separate button styles from gloabal styles

--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,8 +1,5 @@
 /* Global Styles */
-@import "@quill/color.scss";
-@import "@quill/opacity.scss";
-@import "@quill/color.opacity.scss";
-@import "@quill/color.semantic.scss";
+@import "@quill/color.semantic.scss"; //need
 @import "./reset.scss";
 
 @at-root {
@@ -40,246 +37,6 @@
                         );
                     }
                 }
-            }
-        }
-    }
-}
-
-.quill {
-    &__color {
-        &--primary-coral {
-            background-color: var(--core-color-solid-coral-700);
-            color: var(--core-color-solid-slate-50);
-            fill: var(--core-color-solid-slate-50);
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-solid-coral-800);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-solid-coral-900);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--primary-black {
-            background-color: var(--core-color-solid-slate-1400);
-            color: var(--core-color-solid-slate-50);
-            fill: var(--core-color-solid-slate-50);
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-opacity-black-700);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-black-800);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--primary-white {
-            background-color: var(--core-color-solid-slate-50);
-            color: var(--core-color-solid-slate-1400);
-            fill: var(--core-color-solid-slate-1400);
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-opacity-white-800);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-white-700);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--primary-purchase {
-            background-color: var(--core-color-solid-emerald-700);
-            color: var(--core-color-solid-slate-50);
-            fill: var(--core-color-solid-slate-50);
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-solid-emerald-800);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-solid-emerald-900);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--primary-sell {
-            background-color: var(--core-color-solid-cherry-700);
-            color: var(--core-color-solid-slate-50);
-            fill: var(--core-color-solid-slate-50);
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-solid-cherry-800);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-solid-cherry-900);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--secondary-coral {
-            background-color: transparent;
-            border-style: solid;
-            border-color: var(--core-color-solid-coral-700);
-            color: var(--core-color-solid-coral-700);
-            fill: var(--core-color-solid-coral-700);
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-opacity-coral-100);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-coral-200);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--secondary-black {
-            background-color: transparent;
-            border-style: solid;
-            border-color: var(--core-color-solid-black-1400);
-            color: var(--core-color-solid-black-1400);
-            fill: var(--core-color-solid-black-1400);
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-opacity-black-100);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-black-200);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--secondary-white {
-            background-color: transparent;
-            border-style: solid;
-            border-color: var(--core-color-solid-slate-50);
-            color: var(--core-color-solid-slate-50);
-            fill: var(--core-color-solid-slate-50);
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-opacity-white-200);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-white-100);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--secondary-purchase {
-            background-color: transparent;
-            border-style: solid;
-            border-color: var(--core-color-solid-emerald-700);
-            color: var(--core-color-solid-emerald-700);
-            fill: var(--core-color-solid-emerald-700);
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-solid-emerald-100);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-emerald-200);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--secondary-sell {
-            background-color: transparent;
-            border-style: solid;
-            border-color: var(--core-color-solid-cherry-700);
-            color: var(--core-color-solid-cherry-700);
-            fill: var(--core-color-solid-cherry-700);
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-solid-cherry-100);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-cherry-200);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--tertiary-coral {
-            background-color: transparent;
-            color: var(--core-color-solid-coral-700);
-            fill: var(--core-color-solid-coral-700);
-            text-decoration: underline;
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-opacity-coral-100);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-coral-200);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--tertiary-black {
-            background-color: transparent;
-            color: var(--core-color-solid-black-1400);
-            fill: var(--core-color-solid-black-1400);
-            text-decoration: underline;
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-opacity-black-100);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-black-200);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--tertiary-white {
-            background-color: transparent;
-            color: var(--core-color-solid-slate-50);
-            fill: var(--core-color-solid-slate-50);
-            text-decoration: underline;
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-opacity-white-200);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-white-100);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--tertiary-purchase {
-            background-color: transparent;
-            color: var(--core-color-solid-emerald-700);
-            fill: var(--core-color-solid-emerald-700);
-            text-decoration: underline;
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-opacity-emerald-100);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-emerald-200);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
-            }
-        }
-        &--tertiary-sell {
-            background-color: transparent;
-            color: var(--core-color-solid-cherry-700);
-            fill: var(--core-color-solid-cherry-700);
-            text-decoration: underline;
-            border: none;
-            &:hover:not(:disabled) {
-                background-color: var(--core-color-solid-cherry-100);
-            }
-            &:active:not(:disabled) {
-                background-color: var(--core-color-opacity-cherry-200);
-            }
-            &:disabled {
-                opacity: var(--core-opacity-600);
             }
         }
     }
