--- a/lib/components/Button/button.scss
+++ b/lib/components/Button/button.scss
@@ -1,7 +1,8 @@
-@import '@quill/spacing.scss';
-@import '@quill/size.scss';
-@import '@quill/border.scss';
-@import '@quill/motion.scss';
+@import "@quill/spacing.scss";
+@import "@quill/size.scss";
+@import "@quill/border.scss";
+@import "@quill/motion.scss";
+@import "../../styles/quill.custom.color.scss";
 
 .quill-button {
     cursor: pointer;
@@ -14,7 +15,6 @@
     }
 
     &__size {
-
         &--sm {
             padding-inline: var(--core-spacing-400);
             height: var(--core-size-1200);
@@ -54,5 +54,4 @@
     &__full-width {
         width: 100%;
     }
-
 }
