refactor: custom imports and directory

--- a/lib/components/Button/button.scss
+++ b/lib/components/Button/button.scss
@@ -2,7 +2,7 @@
 @import "@quill/size.scss";
 @import "@quill/border.scss";
 @import "@quill/motion.scss";
-@import "../../styles/quill.custom.color.scss";
+@import "@quill-custom/color.scss";
 
 .quill-button {
     cursor: pointer;
