chore: added temp colors

--- a/lib/styles/quill/static.scss
+++ b/lib/styles/quill/static.scss
@@ -299,4 +299,7 @@
     --temp-static-spacing-298: 298px;
     --temp-static-spacing-299: 299px;
     --temp-static-spacing-300: 300px;
+    --temp-static-color-0: #1877f2;
+    --temp-static-color-1: #166ddf;
+    --temp-static-color-2: #1464cb;
 }
