chore: remove testid

--- a/lib/components/SelectionControl/toggle-switch/toggle-switch.scss
+++ b/lib/components/SelectionControl/toggle-switch/toggle-switch.scss
@@ -84,7 +84,7 @@
         }
     }
 
-    &[disabled] {
+    &:disabled{
         pointer-events: none;
         .toggle-switch__knob {
             background-color: var(--core-color-opacity-white-400);
