fix: disable default blue highlight when tapping on mobile

--- a/lib/components/SegmentedControl/segmented-control.scss
+++ b/lib/components/SegmentedControl/segmented-control.scss
@@ -18,6 +18,7 @@
             var(--semantic-color-typography-prominent) 4%,
             transparent
         );
+        -webkit-tap-highlight-color: transparent;
 
         .item {
             display: flex;
